[gd_scene load_steps=6 format=2]

[ext_resource path="res://MapUIs/InsideSystem/closeupStar.png" type="Texture" id=1]
[ext_resource path="res://MapUIs/InsideSystem/planet.png" type="Texture" id=2]
[ext_resource path="res://MapUIs/InsideSystem/PlanetImage.gd" type="Script" id=3]
[ext_resource path="res://MapUIs/GalaxyMap/SystemInfoBG.png" type="Texture" id=4]
[ext_resource path="res://MapUIs/GalaxyMap/EnterButton.gd" type="Script" id=5]

[node name="SystemInfoHolder" type="CanvasLayer"]
layer = 2

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Holder" type="NinePatchRect" parent="Control"]
margin_right = 220.0
margin_bottom = 240.0
texture = ExtResource( 4 )
patch_margin_left = 110
patch_margin_top = 110
patch_margin_right = 110
patch_margin_bottom = 110

[node name="StarImage" type="TextureRect" parent="Control/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 10.0
margin_right = 32.0
margin_bottom = 74.0
texture = ExtResource( 1 )
expand = true

[node name="StarName" type="Label" parent="Control/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 79.0
margin_right = 110.0
margin_bottom = 99.0
text = "Proxima Centauri"
align = 1
valign = 1

[node name="StarCoords" type="Label" parent="Control/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 104.0
margin_right = 110.0
margin_bottom = 124.0
text = "589.3987°, 363.7836°"
align = 1
valign = 1

[node name="PlanetImage" type="TextureRect" parent="Control/Holder"]
margin_left = 46.0
margin_top = 129.0
margin_right = 66.0
margin_bottom = 149.0
rect_pivot_offset = Vector2( 10, 10 )
texture = ExtResource( 2 )
expand = true
script = ExtResource( 3 )

[node name="PlanetAmount" type="Label" parent="Control/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -37.0
margin_top = 129.0
margin_right = 94.0
margin_bottom = 149.0
text = "Planet Count: 6"
valign = 1

[node name="SystemType" type="Label" parent="Control/Holder"]
margin_top = 154.0
margin_right = 220.0
margin_bottom = 174.0
text = "System Type: Green/Red"
align = 1
valign = 1

[node name="EnterButton" type="TextureButton" parent="Control/Holder"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 84.5
margin_top = 179.0
margin_right = 135.5
margin_bottom = 230.0
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 5 )

[node name="EnterLabel" type="Label" parent="Control/Holder/EnterButton"]
margin_right = 51.0
margin_bottom = 51.0
text = "Enter
(E)"
align = 1
valign = 1

[connection signal="pressed" from="Control/Holder/EnterButton" to="Control/Holder/EnterButton" method="_on_EnterButton_pressed"]
